--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,58 @@ html, body {
     color: #ffffff;
 }
 
-.title-welcome-1, .paragraph-welcome-1 {
+.section-2 {
+    background-color: #000000;
+    display: flex;
+    /*nos ayuda a ubicar nuestros componentes*/
+    align-items: center;
+    justify-content: center;
+    /*es una propiedad del contenedor flex y controla el alineamiento de los elementos de una caja flexible */
+    flex-direction: column;
+    /*La dirección en la que se apilas las líneas de texto */
+    padding: 0px 30px;
+    min-height: calc(100vh - 600px); 
     color: #ffffff;
+   
+}
+
+.input {
+    background-color: #ffffff1a;
+    border: 2px solid #d41a81;
+    border-radius: 25px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    height: 50px;
+    padding: 0px 20px;
+    width: 60%;
+}
+
+
+
+.button {
+    background-color: #ffffff1a;
+    border: 2px solid #d41a81;
+    border-radius: 25px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+    height: 45px;    
+    padding: 0px 15px;
+    width: 15%;
+    margin: 20px;
+}
+
+footer {
+    padding: 1rem;
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    font-size: 0.8rem;
+    color: white;
+}
+
+a {
+    color: #6d32db;
+    text-decoration: none;
 }
