--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ html, body {
 
 .header {
     align-items: center;
-    /*background-color: #161b22;*/
-    background-color: #d41a81;
+    /*background-color: #d41a81;*/
+    background-color: #161b22;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -56,7 +56,7 @@ html, body {
 
 .input {
     background-color: #ffffff1a;
-    border: 2px solid #d41a81;
+    border: 2px solid #238636; /* #238636 - #d41a81 */
     border-radius: 25px;
     color: white;
     font-family: 'Poppins', sans-serif;
@@ -69,8 +69,8 @@ html, body {
 
 
 .button {
-    background-color: #ffffff1a;
-    border: 2px solid #d41a81;
+    background-color: #238636; /* #ffffff1a */
+    border: 2px solid #238636;
     border-radius: 25px;
     color: white;
     font-family: 'Poppins', sans-serif;
