--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ html, body {
 
 .header_img {
     margin-left: 30px;
-    width: 50px; 
+    width: 35px; 
 
 }
 
@@ -80,6 +80,66 @@ html, body {
     width: 15%;
     margin: 20px;
 }
+
+/* .profile-div {
+    justify-content: center;
+    margin: auto;
+    padding: 0px 20px;
+    width: 80%;
+    background-color: #0d1117;
+    border: 1px solid #30363d;
+}
+
+.profile-div .figure-profile-1{
+    width: 40%;
+    justify-content: center;
+}
+
+.profile-div .figure-profile-1{
+    width: 230px;
+    height: 230px;
+    border: 1px solid #30363d;
+    border-radius: 50%;
+}
+
+.profile-div .figure-label-1 {
+    flex-direction: column;
+    justify-content: space-between;
+    width: 60%;
+    padding: 1.2rem 0.8rem 0rem 0.8rem;
+}
+
+.profile-div .profile-info-div .figure-label-1 {
+    flex-direction: column;
+}
+
+.profile-div .profile-info-div .figure-label-1{
+    padding-bottom: 0.5rem;
+}
+
+.profile-div .profile-info-div .figure-label-1 label span{
+    font-weight: normal;
+    padding-left: 0.2rem;
+}
+
+.profile-div .profile-info-div figure-profile-2{
+    justify-content: center;
+}
+
+.profile-div .profile-info-div figure-profile-2 img{
+    padding: 0 1rem;
+}
+
+#state{
+    display: none;
+}
+
+.state h1{
+    text-align: center;
+    padding: 1rem;
+} */
+
+
 
 .footer {
     padding: 1rem;
