--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ html, body {
     margin: 20px;
 }
 
-/* .profile-div {
+.profile-div {
     justify-content: center;
     margin: auto;
     padding: 0px 20px;
@@ -137,7 +137,7 @@ html, body {
 .state h1{
     text-align: center;
     padding: 1rem;
-} */
+}
 
 
 
